@@ -2,53 +2,63 @@
 // ClanSphere 2009 - www.clansphere.net
 // $Id$
 
-$cs_lang = cs_translate('board');
-
 include 'mods/board/functions.php';
 
-$fixit = 0;
-
 $start = empty($_GET['start']) ? 0 : (int) $_GET['start'];
-if (!empty($fixit)) $start++;
 
-#$tables = 'comments cms INNER JOIN {pre}_users usr ON cms.users_id = usr.users_id GROUP BY cms.users_id';
-#$tables = 'users usr LEFT JOIN {pre}_threads thr ON thr.users_id = usr.users_id LEFT JOIN {pre}_comments cms ON cms.users_id = usr.users_id GROUP BY usr.users_id';
-
-
-#$tables = 'users usr LEFT JOIN {pre}_comments cms ON cms.users_id = usr.users_id LEFT JOIN {pre}_threads thr ON thr.users_id = usr.users_id GROUP BY usr.users_id';
-#$tables = 'comments cms INNER JOIN {pre}_users usr ON cms.users_id = usr.users_id LEFT JOIN {pre}_threads thr ON thr.users_id = usr.users_id GROUP BY usr.users_id';
-#$tables = 'threads thr LEFT JOIN {pre}_users usr ON thr.users_id = usr.users_id LEFT JOIN {pre}_comments cms ON cms.users_id = usr.users_id GROUP BY usr.users_id';
-$tables = 'comments cms LEFT JOIN {pre}_users usr ON cms.users_id = usr.users_id LEFT JOIN {pre}_threads thr ON thr.users_id = usr.users_id GROUP BY usr.users_id, usr.users_nick';
-
-$cells = 'usr.users_id AS users_id, usr.users_nick AS users_nick, usr.users_delete AS users_delete, usr.users_active AS users_active, COUNT(DISTINCT cms.comments_id) + COUNT(DISTINCT thr.threads_id) AS comments'; 
-
-$select = cs_sql_select(__FILE__,$tables,$cells,0,'comments DESC, usr.users_nick',$start,$account['users_limit']);
-
-$count = cs_sql_select(__FILE__,$tables,'COUNT(usr.users_id)',0,0,0,0);
-$count = count($count);
-
-$cs_ranks = cs_sql_select(__FILE__,'boardranks','boardranks_min, boardranks_name',0,'boardranks_min ASC',0,0);
-
-$data['pages']['list'] = cs_pages('board','toplist',$count,$start);
-
-$cs_users = $select;
-
-if(empty($select)) {
-  $data['toplist'] = '';
+function manageData (&$array, $key) {
+  global $array_result;
+  $array_result[ $array['users_id'] ] = empty($array_result[ $array['users_id'] ]) ? $array['important'] : $array_result[ $array['users_id'] ] +  $array['important'];
 }
 
-$x = empty($fixit) ? $start : $start - 1;
-$count_users = count($cs_users);
+$comments = cs_sql_select (__FILE__, 'comments GROUP BY (users_id)', 'COUNT(*) AS important, users_id', 0, 'important DESC', 0, 0);
+$threads = cs_sql_select (__FILE__, 'threads GROUP BY (users_id)', 'COUNT(*) AS important, users_id', 0, 'important DESC', 0, 0);
 
-for($run = 0; $run < $count_users; $run++) {
-  if(!empty($cs_users[$run]['users_id']) AND $cs_users[$run]['users_active'] > 0 AND empty($cs_users[$run]['users_delete'])) {
-    $x++;
-    $data['toplist'][$run]['class'] = $class = $cs_users[$run]['users_id'] != $account['users_id'] ? 'leftb' : 'leftc';
-    $data['toplist'][$run]['number'] = $run == 0 || $cs_users[$run]['comments'] != $cs_users[$run-1]['comments'] ? $x : $data['toplist'][$run-1]['number'];
-    $data['toplist'][$run]['nick_link'] = cs_url('users','view','id=' . $cs_users[$run]['users_id']);
-    $data['toplist'][$run]['nick'] = $cs_users[$run]['users_nick'];
-    $data['toplist'][$run]['comments'] = $cs_users[$run]['comments'];
-    $data['toplist'][$run]['rank'] = cs_secure(getRankTitle($cs_users[$run]['comments'], $cs_ranks));
+global $array_result;
+
+if (!empty($comments)) array_walk($comments, 'manageData');
+if (!empty($threads)) array_walk($threads, 'manageData');
+arsort ($array_result);
+
+
+$toplist = array_slice ($array_result, $start, $account['users_limit'], true); // Comments + threads
+$count = count($array_result);
+
+$array_result = array();
+$user_cond = '';
+
+foreach ($toplist as $users_id => $noneed) $user_cond .= 'users_id = "' . $users_id . '" OR '; // Select only the users needed
+$user_cond = substr($user_cond, 0, -4);
+
+
+function manageUsers (&$array, $key) {
+  global $array_result;
+  $array_result[ $array['users_id'] ] = $array;
+}
+
+
+$users = cs_sql_select (__FILE__, 'users', 'users_id, users_nick, users_active, users_delete', $user_cond, 0, 0, 0);
+
+array_walk ($users, 'manageUsers'); // To make the users more accessable
+$users = $array_result; // Users
+unset($array_result);
+
+$cs_ranks = cs_sql_select(__FILE__,'boardranks','boardranks_min, boardranks_name',0,'boardranks_min ASC',0,0);
+$data = array();
+$data['pages']['list'] = cs_pages('board','toplist',$count,$start);
+$i = 0;
+
+foreach ($toplist AS $users_id => $comments) {
+
+  if ($users_id != 0) //dont list comments of visitors
+  {
+    $data['toplist'][$i]['user'] = cs_user ($users_id, $users[$users_id]['users_nick'], $users[$users_id]['users_active'], $users[$users_id]['users_delete']);
+    $data['toplist'][$i]['comments'] = $comments;
+    $data['toplist'][$i]['number'] = $i + $start + 1;
+    $data['toplist'][$i]['rank'] = cs_secure(getRankTitle($comments, $cs_ranks));
+    $data['toplist'][$i]['class'] = $users_id != $account['users_id'] ? 'leftb' : 'leftc';
+
+    $i++;
   }
 }
 
